# lambdacube-compiler

./: .gitignore  .travis.yml  CHANGELOG.md  CoreToGLSL.hs  CoreToIR.hs  Driver.hs  IR.hs  LICENSE  Linear.hs  Makefile  Parser.hs  ParserUtil.hs  Pretty.hs  README.md  TODO  Type.hs  Typecheck.hs  create-perf-report.sh  create-test-report.sh  lambdacube-compiler.cabal  lambdacube-dsl.cabal  parseTests.hs  refactor.plan  run-test-suite.sh  runTests.hs  stack.yaml  travis-build.sh
backendtest/: BACKEND-TEST-FRAMEWORK  EditorExamplesTest.hs  TestData.hs  TestServer.hs  hello.json  server.hs
ddl/: Definitions.hs  Generate.hs  Language.hs
doc/: Makefile  common.css  guide.pandoc
lc/: Builtins.lc  Internals.lc  Prelude.lc
performance/: release-0.4.perf  release-0.5.perf
pieces/: Exhaustive.hs  Reducer.hs
prototypes/: CGExp.hs  CoreToGLSL.hs  CoreToIR.hs  Driver.hs  FreeVars.hs  IR.hs  IndexList.hs  Infer.hs  Inspector.hs  LamMachine.hs  LamMachineV2.hs  Linear.hs  PatCompile.hs  Prelude.lc  Pretty.hs  Reducer.hs  ShiftReducer.hs  SplayList.hs  Stream.hs  TCReduce.hs  TODO  Text  Type.hs  Typecheck.hs  create-test-report.sh  gfx.lc  lambdacube-compiler.cabal  prelude.inf  primes.lam  run-test-suite.sh  runTests.hs
src/: CGExp.hs  CoreToGLSL.hs  CoreToIR.hs  Driver.hs  Infer.hs  Token.hs  runTests.hs
test/: Main.hs  PerfReport.hs  UnitTests.hs  runTests.hs
testdata/: Builtins.lc  Builtins.out  Graphics.lc  Graphics.out  HyperbolicParaboloic.lc  HyperbolicParaboloic.out  Hyperboloid.lc  Hyperboloid.out  Internals.lc  Internals.out  Material.lc  Material.out  (+157 more)
(+845 files in other folders)
